// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PlotlyChart Should attach events when the container is attached. 1`] = `
<PlotlyChartClass
  config={Object {}}
  data={
    Array [
      Object {
        "marker": Object {
          "color": "blue",
        },
        "mode": "markers",
        "type": "pointcloud",
        "xy": Float32Array [
          1,
          2,
          3,
          4,
        ],
      },
    ]
  }
  layout={Object {}}
  onClickCallback={[MockFunction]}
  onSelectedCallback={[MockFunction]}
>
  <div
    className="PlotlyChart"
  >
    <Dimmer
      active={true}
    >
      <DimmerInner
        active={true}
      >
        <div
          className="ui active transition visible dimmer"
          onClick={[Function]}
        >
          <div
            className="content"
          >
            <Loader>
              <div
                className="ui loader"
              />
            </Loader>
          </div>
        </div>
      </DimmerInner>
    </Dimmer>
    <div
      className="plotly-chart"
      style={
        Object {
          "marginBottom": 5,
        }
      }
    />
  </div>
</PlotlyChartClass>
`;

exports[`PlotlyChart Should handle extra axes correctly. 1`] = `
<PlotlyChartClass
  config={Object {}}
  data={
    Array [
      Object {
        "marker": Object {
          "color": "blue",
        },
        "mode": "markers",
        "type": "pointcloud",
        "xy": Float32Array [
          1,
          2,
          3,
          4,
        ],
      },
      Object {
        "xaxis": "x2",
      },
      Object {
        "yaxis": "y2",
      },
    ]
  }
  layout={Object {}}
>
  <div
    className="PlotlyChart"
  >
    <Dimmer
      active={true}
    >
      <DimmerInner
        active={true}
      >
        <div
          className="ui active transition visible dimmer"
          onClick={[Function]}
        >
          <div
            className="content"
          >
            <Loader>
              <div
                className="ui loader"
              />
            </Loader>
          </div>
        </div>
      </DimmerInner>
    </Dimmer>
    <div
      className="plotly-chart"
      style={
        Object {
          "marginBottom": 5,
        }
      }
    />
  </div>
</PlotlyChartClass>
`;

exports[`PlotlyChart Should match existing snapshot when given empty data. 1`] = `
<PlotlyChartClass
  config={Object {}}
  data={Array []}
  layout={Object {}}
>
  <div
    className="PlotlyChart"
  >
    <Dimmer
      active={true}
    >
      <DimmerInner
        active={true}
      >
        <div
          className="ui active transition visible dimmer"
          onClick={[Function]}
        >
          <div
            className="content"
          >
            <Loader>
              <div
                className="ui loader"
              />
            </Loader>
          </div>
        </div>
      </DimmerInner>
    </Dimmer>
    <div
      className="plotly-chart"
      style={
        Object {
          "marginBottom": 5,
        }
      }
    />
  </div>
</PlotlyChartClass>
`;

exports[`PlotlyChart Should match existing snapshot when given sample data. 1`] = `
<PlotlyChartClass
  config={Object {}}
  data={
    Array [
      Object {
        "marker": Object {
          "color": "blue",
        },
        "mode": "markers",
        "type": "pointcloud",
        "xy": Float32Array [
          1,
          2,
          3,
          4,
        ],
      },
    ]
  }
  layout={Object {}}
>
  <div
    className="PlotlyChart"
  >
    <Dimmer
      active={true}
    >
      <DimmerInner
        active={true}
      >
        <div
          className="ui active transition visible dimmer"
          onClick={[Function]}
        >
          <div
            className="content"
          >
            <Loader>
              <div
                className="ui loader"
              />
            </Loader>
          </div>
        </div>
      </DimmerInner>
    </Dimmer>
    <div
      className="plotly-chart"
      style={
        Object {
          "marginBottom": 5,
        }
      }
    />
  </div>
</PlotlyChartClass>
`;
